# lexiai-server

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
api/: ai.py  authentication.py  models.py  run.http  urls.py  views.py
api/favorites/: views.py
api/settings/: views.py
api/tests/: test_models.py
api/topics/: views.py
api/users/: views.py
app/: models.py  run.http  urls.py  views.py
docs/: DailyScrum.md  api.md  heroku.md  init.md  use-case.wsd
project/: settings.py  urls.py  wsgi.py
project/settings/: base.py  development.py  production.py
