[project]
name = "lexiai-server"
version = "0.1.0"
description = "LexiAI Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-cors-headers>=4.6.0",
    "djangorestframework>=3.15.2",
    "dnspython>=2.7.0",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
]
